--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -637,6 +637,7 @@ input, select, textarea {
 
 /* Image */
 
+
 	.image {
 		border-radius: 4px;
 		border: 0;
@@ -686,13 +687,19 @@ input, select, textarea {
 
 		.image.fit {
 			display: block;
-			margin: 0 0 2rem 0;
-			width: 100%;
+			margin: 0 auto;
+			/* margin: 0 0 2rem 0; */
+			width: 80%;
 		}
 
 			.image.fit img {
 				width: 100%;
 			}
+
+		.image.wrap {
+		 float: left;
+		 padding: 0 15px 0 0;
+	 	 width: 50%;}
 
 		.image.main {
 			display: block;
