--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -701,6 +701,10 @@ input, select, textarea {
 		 padding: 0 15px 0 0;
 	 	 width: 50%;}
 
+			 .image.wrap img {
+				 width: 100%;
+			 }
+
 		.image.main {
 			display: block;
 			margin: 2.5rem 0;
@@ -1147,9 +1151,12 @@ input, select, textarea {
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
 			background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("../../images/overlay.png");
-			background-size: auto, 256px 256px;
-			background-position: center, center;
-			background-repeat: no-repeat, repeat;
+			background-size: auto,
+ 256px 256px;
+			background-position: center,
+ center;
+			background-repeat: no-repeat,
+ repeat;
 			z-index: 2;
 		}
 
